--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <meta name="author" content="" />
     <link rel="icon" href="assets/img/favicon.ico" />
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Database of Security.ai</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
