--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <body class="staticrypt-body">
     <a
       class="github-fork-ribbon"
-      href="https://github.com/a-nau/password-protected-website-template"
+      href="security.ai"
       data-ribbon="Template on GitHub"
       title="Template on GitHub"
     >
@@ -196,7 +196,7 @@
         <div class="staticrypt-form">
           <div class="staticrypt-instructions">
             <p class="staticrypt-title">Login</p>
-            <p>This is a test website, use the password 'test' to enter.</p>
+            <p>This site is locked 🔒. You must enter password to get in! THIS IS AN SITE DATABASE ONLY ENTER WHIT PASSWORD</p>
           </div>
 
           <hr class="staticrypt-hr" />
