--- a/main.html
+++ b/main.html
@@ -33,11 +33,9 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Your protected content.</h1>
+        <h1 class="cover-heading">Welcome to Securty.ai</h1>
         <p class="lead">
-          Cover is a one-page template for building simple and beautiful home
-          pages. Download, edit the text, and add your own fullscreen background
-          photo to make it your own.
+          Database in inspect bye hackmahub.
         </p>
         <p class="lead">
           <a href="#" class="btn btn-lg btn-secondary">Learn more!</a>
@@ -48,8 +46,8 @@
         <div class="inner">
           <p>
             Cover template for
-            <a href="https://getbootstrap.com/">Bootstrap</a>, by
-            <a href="https://twitter.com/mdo">@mdo</a>.
+            <a href="https://hackmanhub.github.io/security.ai.database/">Lock Site</a>, by
+            <a href="v">Lock Site</a>.
           </p>
         </div>
       </footer>
