--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p>
-            Cover template for
+            Manager Panel Of Database
             <a href="https://hackmanhub.github.io/security.ai.database/">Lock Site</a>, by
             <a href="v">Lock Site</a>.
           </p>
