--- a/password_template.html
+++ b/password_template.html
@@ -182,10 +182,10 @@
     <a
       class="github-fork-ribbon"
       href="https://github.com/a-nau/password-protected-website-template"
-      data-ribbon="Template on GitHub"
-      title="Template on GitHub"
+      data-ribbon="Protected By X Anti-Cheat"
+      title="Protected By security.ai"
     >
-      Template on GitHub
+      Protected By
     </a>
     <div id="staticrypt_loading" class="staticrypt-spinner-container">
       <div class="staticrypt-spinner"></div>
@@ -231,10 +231,10 @@
     <footer class="staticrypt-footer">
       <p class="pull-right">
         Created with
-        <a href="https://github.com/a-nau/password-protected-website-template"
-          >PPW Template</a
+        <a href="http://security.ai/"
+          >Founder of hackmanhub</a
         >
-        and <a href="https://robinmoisson.github.io/staticrypt">StatiCrypt</a>.
+        and <a href="http://security.ai/founder">Founder of security.ai</a>.
       </p>
     </footer>
 
